--- a/ANN-I-Initialization of the Weights.ipynb
+++ b/ANN-I-Initialization of the Weights.ipynb
@@ -161,7 +161,7 @@
     "We experiment with five random functions.\n",
     "\n",
     "The first function draws samples from a **uniform** distribution between 0 ~ 1.\n",
-    "The last four functions draw samples from a **standard normal** (0 mean & unit varuance) distribution. However, we control the **variance** (to push samples close to 0).\n",
+    "The last four functions draw samples from a **standard normal** (0 mean & unit variance) distribution. However, we control the **variance** (to push samples close to 0).\n",
     "\n",
     "- Function 1: Generate samples from a “continuous uniform” distribution between 0 ~ 1.\n",
     "- Function 2: Generate samples from the “standard normal” distribution (0 mean and variance 1).\n",
